[package]
name = "ito-canvas"
version = "0.1.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A library for creating text base drawing"
repository = "https://github.com/ivanceras/ito-canvas"
documentation = "https://docs.rs/ito-canvas"
keywords = ["text", "tui", "canvas", "widget"]

[dependencies]
dot-canvas = { path = "crates/dot-canvas" }
unicode-canvas = { path = "crates/unicode-canvas" }

[workspace]
members = [
"crates/dot-canvas",
"crates/unicode-canvas",
]
